--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Marco Caggiano",
   "license": "ISC",
   "dependencies": {
+    "angularjs-datepicker": "^2.1.23",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
