--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Marco Caggiano",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "angularjs-datepicker": "^2.1.23",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
